# nail-it

./: ..MASTER_INDEX.md  .gitignore  ADVANCED_ALGORITHMS_AND_DATA_STRUCTURES.md  ADVANCED_DATABASE_OPTIMIZATION.md  ADVANCED_GO_CONCEPTS.md  ADVANCED_GO_CONCURRENCY.md  ARPIT_BHYANI_SYSTEM_DESIGN_CONCEPTS.md  ARPIT_HARKIRT_SYSTEM_DESIGN_NOTES.md  ASLI_ENGINEERING_COMPLETE_GUIDE.md  ASLI_ENGINEERING_DISTRIBUTED_SYSTEMS.md  Advanced_System_Design_Scenarios.md  BOOKMYSHOW_SYSTEM_DESIGN.md  CLOUD_NATIVE_ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMPLETE_CHAT_CONTEXT.md  CONTRIBUTING.md  DATABASE_SHARDING_STRATEGIES.md  DISTRIBUTED_SYSTEMS_DETAILED_THEORY_AND_EXAMPLES.md  DSA_Questions_Answers_Guide.md  Databases_Complete_Guide_Part2.md  Designing_Data_Intensive_Applications_Summary.md  DevOps_Tools_Complete_Guide.md  FILE_LOCATION_MAPPING.md  FINAL_CLEAN_STRUCTURE.md  FINAL_LINK_FIX_REPORT.md  FINAL_REPOSITORY_SUMMARY.md  FINAL_VALIDATION_REPORT.md  GOLANG_IMPLEMENTATION_GUIDE.md  Go_Expertise_Complete_Guide.md  Google_Advanced_Algorithms_Guide.md  Google_Distributed_Systems_Guide.md  Google_Interview_Best_Resources.md  Google_Interview_Weekly_Schedule.md  INTERVIEW_PREPARATION_SUMMARY.md  Interview_Preparation_Complete_Checklist.md  LICENSE  LINK_FIXES_SUMMARY.md  LOW_LATENCY_TRADING_SYSTEMS_GOLANG.md  MASTER_INDEX.md  MICROSERVICES_ARCHITECTURE_DEEP_DIVE.md  (+39 more)
.cursor-autocontinue/: [2025-09-14T15:59:35.730Z] DOCUMENT:   [2025-09-14T16:38:05.633Z] DOCUMENT:   [2025-09-14T16:38:53.849Z] DOCUMENT:   [2025-09-14T16:52:24.370Z] DOCUMENT:   [2025-09-14T16:52:24.547Z] DOCUMENT:   [2025-09-14T16:52:26.270Z] DOCUMENT: [2025-09-14T15:58:35.640Z] DOCUMENT:   [2025-09-14T17:10:54.465Z] DOCUMENT:   [2025-09-14T19:06:32.109Z] DOCUMENT:   [2025-09-14T19:06:32.110Z] DOCUMENT:   [2025-09-14T19:11:54.834Z] DOCUMENT:   [2025-09-14T19:31:59.600Z] DOCUMENT:   [2025-09-15T05:45:40.770Z] DOCUMENT:   [2025-09-15T05:45:40.771Z] DOCUMENT:   [2025-09-15T06:01:41.743Z] DOCUMENT:   chatContext.json  contextBackup.json  context_log.md
00_foundation/: README.md
01_backend_core/: README.md
01_fundamentals/: ADVANCED_ALGORITHMS_AND_DATA_STRUCTURES.md  ADVANCED_DATABASE_OPTIMIZATION.md  ADVANCED_GO_CONCEPTS.md  ADVANCED_GO_CONCURRENCY.md  ADVANCED_MICROSERVICES_PATTERNS.md  DSA_Questions_Answers_Guide.md  Databases_Complete_Guide.md  Databases_Complete_Guide_Part2.md  Designing_Data_Intensive_Applications_Summary.md  DevOps_Tools_Complete_Guide.md  Go_Expertise_Complete_Guide.md  Operating_System_Concepts_Guide.md  README.md  System_Design_Concepts_Guide.md  factory func(
02_system_design/: ADDITIONAL_SYSTEM_DESIGN_SCENARIOS.md  ADDITIONAL_SYSTEM_DESIGN_SCENARIOS_PART2.md  ARPIT_BHYANI_SYSTEM_DESIGN_CONCEPTS.md  ARPIT_HARKIRT_SYSTEM_DESIGN_NOTES.md  Advanced_System_Design_Scenarios.md  BOOKMYSHOW_SYSTEM_DESIGN.md  README.md  REAL_WORLD_SYSTEM_DESIGN_CASE_STUDIES.md  SYSTEM_DESIGN_INTERVIEW_MASTERY.md  SYSTEM_DESIGN_INTERVIEW_PREPARATION.md  SYSTEM_DESIGN_PATTERNS_DETAILED_THEORY_AND_EXAMPLES.md  System_Design_Patterns_Complete_Guide.md  advanced_system_design_patterns_guide.md
03_backend_engineering/: README.md  advanced_testing_guide.md  code_quality_guide.md  database_performance_guide.md  distributed_systems_guide.md  engineering_context_guide.md  frontend_engineering_guide.md  modern_technologies_guide.md  newFunc func(  observability_monitoring_guide.md  performance_engineering_guide.md  security_engineering_guide.md
04_devops_infrastructure/: README.md  advanced_devops_comprehensive.md  advanced_kubernetes_operations_guide.md  advanced_monitoring_comprehensive.md  ci_cd_pipelines.md  container_orchestration.md  infrastructure_as_code.md  kubernetes.md  monitoring_observability.md
05_ai_ml/: ML_BACKEND_SYSTEMS_GUIDE.md  README.md  TinyML  advanced_ml_systems.md  advanced_ml_systems_comprehensive.md  ml_systems_backend_engineering_guide.md  neural_networks.md
06_behavioral/: README.md  advanced_behavioral_scenarios.md  advanced_leadership_interviews.md  advanced_leadership_scenarios.md  behavioral_interviews_comprehensive.md  conflict_resolution.md  executive_leadership_scenarios.md  leadership_communication.md  leadership_scenarios.md  problem_solving_innovation.md  team_management.md  teamwork_collaboration.md  technical_leadership.md
07_company_specific/: README.md  faang_plus_companies.md  razorpay_technical_guide.md
08_interview_prep/: README.md  interview_preparation_masterclass.md
08_revision_plans/: company_specific_revision.md  skill_matrix.md  spaced_repetition_schedule.md  weekly_checkpoints.md
09_curriculum/: .*  ASSESSMENT_CERTIFICATION_GUIDE.md  CHANGELOG.md  CONFLUENCE_MACROS.md  CONFLUENCE_PUBLICATION.md  CONFLUENCE_PUBLISHING_GUIDE.md  CONFLUENCE_READY_CONTENT.md  CURRICULUM_COMPLETION_REPORT.md  CURRICULUM_COMPLETION_SUMMARY.md  CURRICULUM_README.md  FINAL_ACHIEVEMENT_SUMMARY.md  INTERLINKING_GUIDE.md  LEARNING_PATH_GUIDE.md  LEARNING_PATH_GUIDE.md#assessment-and-progress-tracking  LEARNING_PATH_GUIDE.md#resources-and-tools  MASTER_ENGINEER_CURRICULUM.md  MERMAID_DIAGRAMS_GUIDE.md  PROJECT_SHOWCASE_GUIDE.md  README.md  confluence_html_export.html  confluence_publisher.py
09_curriculum_90_day/: overview.md
10_resources/: README.md  chat.md  comprehensive_resources.md  (+1 more)
AI-ML/: README.md
rust-curriculum/examples/lesson25_e2e_service/: Cargo.toml
rust-curriculum/examples/lesson25_e2e_service/src/: lib.rs
rust-curriculum/projects/grpc_tonic_service/: Cargo.toml  Dockerfile  README.md  build.rs
rust-curriculum/projects/grpc_tonic_service/examples/: client.rs
rust-curriculum/projects/grpc_tonic_service/proto/: echo.proto
rust-curriculum/projects/grpc_tonic_service/src/: lib.rs  main.rs
rust-curriculum/projects/grpc_tonic_service/tests/: integration.rs
rust_curriculum/projects/cli_tool/: Cargo.toml  README.md
rust_curriculum/projects/embedded_iot/: Cargo.toml  README.md
rust_curriculum/projects/game_engine/: Cargo.toml  README.md
rust_curriculum/projects/microservices_platform/: Cargo.toml  README.md
rust_curriculum/projects/web_server/: Cargo.toml  README.md
(+2361 files in other folders)
