[package]
name = "lesson25_e2e_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros" ] }
tower = "0.5"
