[package]
name = "grpc_tonic_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[lib]
name = "grpc_tonic_service"
path = "src/lib.rs"
